Fix imports and multiple volatileRead variables